Voegt DWM aan werken toe en wat referenties aan DWM en EWI

--- a/index/heidegger-index.yml
+++ b/index/heidegger-index.yml
@@ -1705,6 +1705,8 @@ Dialektik:
     - start: 306
 Dichten:
   references:
+    DWM:
+    - start: 200
     GA 13:
     - end: 124
       start: 123
@@ -1916,6 +1918,9 @@ Entzug:
     - start: 165
 Erde:
   references:
+    DWM:
+    - start: 198
+      suffix: f
     FW:
     - start: 88
     HF:
@@ -2770,6 +2775,9 @@ Herstellen:
     - start: 288
 Himmel:
   references:
+    DWM:
+    - start: 198
+      suffix: f
     FW:
     - start: 88
     HF:
@@ -2781,6 +2789,7 @@ Himmel:
   related:
   - Theologische Schriften 3, Ideen zur Gebetstheorie 3
   - Äther
+  - Erde
 Himmlischen:
   references:
     WD:
@@ -5190,6 +5199,10 @@ Tonart:
     - start: 597
     SvG:
     - start: 166
+Totenbaum:
+  references:
+    EWI:
+    - start: 26
 Tragödie:
   references:
     EM:
@@ -5885,6 +5898,8 @@ Wo aber Gefahr ist, wächst / Das Rettende auch.:
   type: w
 Wohnen:
   references:
+    DWM:
+    - start: 198
     HF:
     - start: 138
       suffix: f
