--- a/index/works.yml
+++ b/index/works.yml
@@ -1,3 +1,28 @@
+DWM:
+  author:
+  - family: Heidegger
+    given: Martin
+  citation-key: heideggerDWM
+  collection-editor:
+  - family: Klostermann
+    given: Vittorio
+  collection-number: band 7
+  collection-title: Gesamtausgabe
+  editor:
+  - family: Hermann
+    given: Friedrich-Wilhelm
+    non-dropping-particle: von
+  event-place: Frankfurt am Main
+  id: DWM
+  issued:
+    date-parts:
+    - - 2000
+  language: ger
+  page: 239-302
+  publisher: Vittorio Klostermann
+  publisher-place: Frankfurt am Main
+  title: »… dichterisch wohnet der Mensch …«
+  type: chapter
 EM:
   author:
   - family: Heidegger
